Fine, I'll just make sure it looks better on mobile than desktop

--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@
 }
 
 .responsive {
-    max-width: 100%;
+    max-width: 82.5%;
     height: auto;
 }
 
